fix design on mobile

--- a/css/wordl_style.css
+++ b/css/wordl_style.css
@@ -296,9 +296,14 @@ header .menu-btn {
         grid-template-columns: repeat(30, 0.35rem);
         grid-template-rows: repeat(3, 2.6rem);
     }
+    .tiles {
+        width: 305px;
+        height: 350px;
+    }
     .tile {
         width: 50px;
         height: 50px;
+        font-size: 16px;
     }
 }
 
@@ -318,9 +323,14 @@ header .menu-btn {
         grid-template-columns: repeat(30, 0.6rem);
         grid-template-rows: repeat(3, 2.7rem);
     }
+    .tiles {
+        width: 345px;
+        height: 400px;
+    }
     .tile {
         width: 55px;
         height: 55px;
+        font-size: 20px;
     }
 }
 
@@ -340,9 +350,14 @@ header .menu-btn {
         grid-template-columns: repeat(30, 0.85rem);
         grid-template-rows: repeat(3, 2.8rem);
     }
+    .tiles {
+        width: 375px;
+        height: 440px;
+    }
     .tile {
         width: 60px;
         height: 60px;
+        font-size: 24px;
     }
 }
 
@@ -362,9 +377,14 @@ header .menu-btn {
         grid-template-columns: repeat(30, 1.25rem);
         grid-template-rows: repeat(3, 2.9rem);
     }
+    .tiles {
+        width: 405px;
+        height: 490px;
+    }
     .tile {
         width: 65px;
         height: 65px;
+        font-size: 28px;
     }
 }
 
@@ -384,8 +404,13 @@ header .menu-btn {
         grid-template-columns: repeat(30, 1.5rem);
         grid-template-rows: repeat(3, 3rem);
     }
+    .tiles {
+        width: 435px;
+        height: 520px;
+    }
     .tile {
         width: 70px;
         height: 70px;
+        font-size: 32px;
     }
 }
